Fix RTL issues with .item CSS class. Also use dir atttribute instead of style.direction since it is recommended to treat direction as a sementic information.
BUG=15077, 15087

TEST=Start chrome with -new-new-tab-page --lang=he and navigate to some
tabs, both RTL tabs and LTR tabs and then close them. The icon should
not overlap the text in the recent section of the new tab page. The text should be aligned next to the icon.

Review URL: http://codereview.chromium.org/147040

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@19075 0039d316-1c4b-4281-b951-d872f2087c98

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -429,7 +429,7 @@ html[dir=rtl] .thumbnail-container .title div {
 .item {
   background: no-repeat 0% 50%;
   padding: 2px;
-  -webkit-padding-start: 18px;
+  padding-left: 18px;
   -webkit-background-size: 16px;
   background-color: hsla(213, 63%, 93%, 0);
   display: block;
@@ -444,6 +444,9 @@ html[dir=rtl] .thumbnail-container .title div {
 
 html[dir='rtl'] .item {
   background-position-x: 100%;
+  padding-right: 18px;
+  padding-left: 2px;
+  text-align: right;
 }
 
 .window {
